Working on switching to MediaPipe.

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -13,7 +13,13 @@ nokhwa = { version = "0.10.7", features = ["input-native", "output-threaded"] }
 image = "0.25"
 anyhow = "1.0.76"
 ndarray = "0.15.6"
-ort = { version = "1.16.3", features = ["cuda"] }
+mediapipe-rs = { version = "0.1.0-dev", git = "https://github.com/WasmEdge/mediapipe-rs" }
+tokio = { version = "1.32.0", features = ["full"] }
+pyo3 = { version = "0.21.0", features = ["extension-module"] }
+numpy = "0.21.0"
+
+[build-dependencies]
+cc = "1.0"
 
 [profile.release]
 debug = true
